Merged RollCall module code (requires Android 2.2 or higher). Added Android version checking in RollCall module call for compatibility with lower Android versions and in external files removal (DatabaseHelper) in order to fix a NoSuchMethod eception in lower Android versions.